--- a/2nd class/new.html
+++ b/2nd class/new.html
@@ -13,6 +13,7 @@
         <h1>weather forcast</h1>
         <p>the weather will be sunny</p>
         <p>tomorrow will be rainy.</p>
+        <p>hi Boys</p>
     </div>
    </div>
 </body>
