--- a/assignment 3/assig 3.html
+++ b/assignment 3/assig 3.html
@@ -17,6 +17,7 @@
                 <span class="con1-2-nav">Services</span>
                 <span class="con1-2-nav">Contact</span>
             </div>
+            <hr> </div>
         </div>
 
 
@@ -24,8 +25,9 @@
 ``
         <div class="con2">
             <div class="con2-1">
+                <img class="A" src="boximmagine_dx_ita.jpg" alt="pic">
                 <h2 style="padding-left: 50px; padding-top: 100px;">Italian Fashion Whole Sale</h2>
-                <h2 style="color:grey; padding-left: 50px; padding-top: 20px;">For more than 25 years we have spread
+                <h2 style="color:rgb(77, 44, 44); padding-left: 50px; padding-top: 20px;">For more than 25 years we have spread
                     <br /> in Italy Brand</h4>
             </div>
             <div class="con2-2">
@@ -39,7 +41,12 @@
 
         <div class="con3">3</div>
         <div class="con4">4</div>
-        <div class="con5">5</div>
+        <div class="con5">
+            <h4>
+                Footer
+
+            </h4>
+        </div>
     </div>
 
 </body>
